# rocket-league-clone

./: .clang-format  .gitignore
render-car/: CMakeLists.txt  README.md
render-car/include/: Camera.hpp  Mesh.hpp  Model.hpp  Shader.hpp
render-car/include/glad/: glad.h
render-car/resources/shaders/: basic.frag  model_loading.frag  model_loading.vert
render-car/src/: Camera.cpp  Mesh.cpp  Model.cpp  Shader.cpp  glad.c  main.cpp
